--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 		<div class="container">
 			<ul>
 				<li>
-					<a href="">elsa</a>
+					<a href="index.html">elsa</a>
 				</li>
 				<li class="align-right">
-					<a href="">Home</a>
-					<a href="">Skill</a>
-					<a href="">Contact</a>
+					<a href="#home">Home</a>
+					<a href="#skill">Skill</a>
+					<a href="#contact">Contact</a>
 				</li>
 			</ul>
 		</div>
@@ -25,7 +25,7 @@
 			<img class="profile-img" src="profile-women.png" alt="profile">
 			<h1 class="text-bold text-center">Elsa Aridha Rachman</h1>
 			<p class="bio-p">Hello introducing, I Am Elsa Aridha Rachman, I am a back-end developer who designs or developer software.</p>
-			<a href="" class="btn">Let's Stalk</a>
+			<a href="#skill" class="btn">Let's Stalk</a>
 			<br><br>
 		</div>
 	</section>
